PIDP-(853/854/855) Fixed CSS bugs (#485)
* fixed css for moa user, horizontal scroll bar and slider button click issue

* modified gap size

* Review fixes css bugs

* button click issue fixed and added pipd 857

* Text alignment issue fixed -pidp-858

* space

---------

--- a/workspace/apps/pidp/src/app/features/portal/portal.page.scss
+++ b/workspace/apps/pidp/src/app/features/portal/portal.page.scss
@@ -48,7 +48,9 @@
     }
   }
 }
-
+.viewport-small{
+  --content-padding: var(--gap) 0;
+}
 .viewport-xsmall {
   & header {
     & h2 {
