--- a/workspace/apps/pidp/src/scss/material/_material-overrides.scss
+++ b/workspace/apps/pidp/src/scss/material/_material-overrides.scss
@@ -43,6 +43,14 @@
   }
 }
 
+.viewport-xsmall,
+.viewport-small {
+  .mat-horizontal-stepper-header-container {
+    align-items: normal !important;
+    flex-direction: column !important;
+  }
+}
+
 //
 // Expansion Panel
 //
